--- a/the-best/src/styles/global.css
+++ b/the-best/src/styles/global.css
@@ -101,6 +101,7 @@ body{
     border: 5px solid;
     border-radius: 50%;
     padding: 10px;
+    padding-top: 12px;
     border-color: #038eb1;
 }
 
