--- a/the-best/src/styles/global.css
+++ b/the-best/src/styles/global.css
@@ -19,7 +19,7 @@ body{
     justify-content: center;
     align-items: center;
     font-size: 72px;
-    border-bottom: groove 2px;
+
     width: 70%;
     margin: auto;
     margin-top: 2%;
@@ -230,6 +230,10 @@ body{
 }
 .navigation{
     margin-top: 28px;
+    border-bottom: groove 2px;
+    padding-bottom: 30px;
+    width: 93%;
+    margin: 38px auto;
 }
 .link-menu{
     text-decoration: none;
@@ -240,12 +244,17 @@ body{
     color: white;
     font-weight: 900;
 }
-.back{
+.back-icon{
+    position: absolute;
     font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.back-icon{
-    margin-top: 3.5px;
+    top: 40px;
+    left: 55px;
+    text-decoration: none;
+    color: whitesmoke;
+    border-radius: 50%;
+    border: 4px solid white;
+    padding: 5px;
 }
