--- a/the-best/src/styles/global.css
+++ b/the-best/src/styles/global.css
@@ -283,6 +283,7 @@ body{
     
 }
 .starlabel{
+    display: block;
     color: dimgrey;
     font-size: 20px;
     margin-top: 13px;
@@ -290,6 +291,7 @@ body{
     font-style: italic;
     font-weight: 900;
     transition: all .3s ease-in-out;
+    margin-right: 12px;
 }
 .fas:hover .starlabel{
 
